exclude cv and resume

--- a/_config.yml
+++ b/_config.yml
@@ -191,6 +191,8 @@ exclude:
   - readme_preview/
   - vendor
   - _includes/repository/ 
+  - _includes/cv/ 
+  - _includes/resume/
   
 keep_files:
   - CNAME
